--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -362,16 +362,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/international-day-against-homophobia-and-transphobia--2">International Day Against Homophobia and Transphobia</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/207015.pt">Campanha GREAT apresenta evento sobre Engenharia Automobilistica</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/284721.es-419">British Council y Ministerio de Educación inician Escuela de Verano para capacitar a 400 profesores peruanos de inglés</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/242212.el">Εκδήλωση για τον εορτασμό των γενεθλίων της ΑΜ Της Βασίλισσας Ελισάβετ ΙΙ</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/233437.pt">Infraestrutura e logística no Brasil</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/business-secretary-visits-recife-to-strengthen-education-ties--2">Business Secretary visits Recife to strengthen education ties</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/220494.es-419">Medirán emisiones de metano con muestras tomadas en Chacaltaya</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/290702.ja">英国による健康保険付加料の導入</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/238913.pt">Conferência sobre Eficiência Energética em Manaus</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/262717.uk">Посольство Великої Британії в Україні проведе освітню виставку в Києві та розіграє навчальний курс у Лондоні</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/changes-to-passport-services-for-british-nationals--5">Changes to passport services for British nationals</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/225603.pt">Ampliando a cooperação entre Brasil e Reino Unido</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/consular-enquiries-for-europe">Consular enquiries for Europe</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/294447.pt">Inovações Britânicas na área da saúde na Hospitalar 2015</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/uk-visa-applicant-arrested-for-fraud--2">UK Visa Applicant Arrested for Fraud</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/232492.ja">Educational Testing Service (ETS)　について</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/293342.ja">英国自動車フォーラムおよびネットワーキングレセプションのご案内</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/human-rights-council-18th-session-of-the-universal-periodic-review-working-group-geneva-27-january-to-7-february-2014--6">Human Rights Council: 18th Session of the Universal Periodic Review Working Group, Geneva, 27 January to 7 February 2014</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/solidarity-with-the-syrian-people">Solidarity with the Syrian People</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/296094.es">La Embajada Británica busca socio empresarial para Tea Shop en el Pabellón Británico</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
